--- a/src/components/AddProfileCard.css
+++ b/src/components/AddProfileCard.css
@@ -8,23 +8,26 @@
     box-shadow: 0 6px 6px rgba(0, 0, 0, 0.1); 
     text-align: center;
     display: inline-block; /* Display the cards in line */
-    width: calc(50% - 10px); /* Set the width of each card */
+    width: calc(50% - 10px);
     margin-top: 20px;
     position: relative;
     min-height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
   }
   .add-profile-button {
     cursor: pointer;
-    display: flex;
     align-items: center;
     justify-content: center;
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 60px;
     border-radius: 50%;
-    background-color: gray;
-    color: #fff;
+    background-color:lightgray;
+    color:gray;
     font-size: 30px;
     margin: auto;
+    font-size: 20px;
    
   }
   .display-profile-data {
@@ -32,6 +35,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 10px;
+    text-align: center;
   }
   
   .display-profile-data h4 {
@@ -43,10 +47,21 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    align-items: center; /* Center align the items vertically */
+    gap: 20px;
+    margin: 10px 0;
   }
   
   .profile-info-row p {
-    margin: 0;
+    display: flex;
+    align-items: center; /* Center align the items vertically */
+    gap: 5px;
+    font-size: 18px;
+    font-weight: bold;
+  }
+  .profile-info-row span {
+    display: flex;
+    align-items: center; /* Center align the items vertically */
   }
   .display-profile-data svg {
     margin-right: 5px;
@@ -63,7 +78,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-   
+    z-index: 999;
   }
   
   .profile-form {
@@ -100,9 +115,9 @@
     border-radius: 4px;
     padding: 10px 20px;
     cursor: pointer;
-  }
+  } 
   
-  .profile-form button:first-child {
+ .profile-form button:first-child {
     margin-right: 10px;
   }
   
