--- a/src/components/AddProfileCard.css
+++ b/src/components/AddProfileCard.css
@@ -1,13 +1,11 @@
-  /* AddProfileCard.css (no changes to the previous styles) */
-  
-  .add-profile-card {
+ .add-profile-card {
     cursor: pointer;
     background-color: white;
     padding: 20px;
     border-radius: 30px;
     box-shadow: 0 6px 6px rgba(0, 0, 0, 0.1); 
     text-align: center;
-    display: inline-block; /* Display the cards in line */
+    display: inline-block; 
     width: calc(50% - 10px);
     margin-top: 20px;
     position: relative;
@@ -47,14 +45,14 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    align-items: center; /* Center align the items vertically */
+    align-items: center; 
     gap: 20px;
     margin: 10px 0;
   }
   
   .profile-info-row p {
     display: flex;
-    align-items: center; /* Center align the items vertically */
+    align-items: center; 
     gap: 5px;
     font-size: 18px;
     font-weight: bold;
